Eroteletu zipaus ja tiedoston lataus eri olioihin, koska todennäköistä että niitä tapahtuu samanaikaisesti. (kasvatettu koneen muistia 8GB)